# MicroFlakeX

./: .gitignore  CMakeLists.txt  MfxApplication.cpp  MfxControl.cpp  MfxLowPart.h  MfxMedPart.vcxproj  MfxMessageServer.cpp  README.md  pch.h
Examples/: MfxButton.h  MfxLowPart.h  MfxLowPart.lib  MfxMedPart.lib  MyUI.cpp  MyUI.h  WindowsProject1.cpp  WindowsProject1.h  WindowsProject1.sln  WindowsProject1.vcxproj  WindowsProject1.vcxproj.filters  framework.h  myButton.cpp  myButton.h  targetver.h
MfxLowPart/: MfxDllMain.cpp  MfxImage.cpp  MfxImageList.cpp  MfxLowPart.cpp  MfxLowPart.h  MfxLowPart.sln  MfxLowPart.vcxproj  MfxLowPart.vcxproj.filters  MfxWords.cpp  pch.h  t.txt
MfxMedPart/: MfxApplication.cpp  MfxButton.cpp  MfxButton.h  MfxControl.cpp  MfxDllMain.cpp  MfxLowPart.h  MfxLowPart.lib  MfxMedPart.cpp  MfxMedPart.h  MfxMedPart.sln  MfxMedPart.vcxproj  MfxMedPart.vcxproj.filters  MfxMessageServer.cpp  MfxUI.cpp  pch.h
MicroFlakeX/Example_MicroFlakeX_00/: Example_MicroFlakeX_00.cpp  Example_MicroFlakeX_00.sln  Example_MicroFlakeX_00.vcxproj  Example_MicroFlakeX_00.vcxproj.filters
MicroFlakeX/Example_MicroFlakeX_01/: Example_MicroFlakeX_01.cpp  Example_MicroFlakeX_01.sln  Example_MicroFlakeX_01.vcxproj  Example_MicroFlakeX_01.vcxproj.filters  MyUI.cpp  MyUI.h
MicroFlakeX/Example_MicroFlakeX_02/: Example_MicroFlakeX_02.cpp  Example_MicroFlakeX_02.sln  Example_MicroFlakeX_02.vcxproj  Example_MicroFlakeX_02.vcxproj.filters  MfxTest.cpp  MfxTest.h
MicroFlakeX1/: README.md
MicroFlakeX2/: README.md
MicroFlakeX3/: README.md
MicroGenerics/: CMakeLists.txt
MicroGhost/: CMakeLists.txt
MicroGhost/include/: MicroGhost.h
MicroGhost/include/MicroGhost/: MGhost.h
MicroGhost/source/: pch.h
MicroGhost/source/MicroGhost/: MGhost.cpp
lib_Debug/: MicroFlakeX_A.0.1.1.exp  MicroFlakeX_A.0.1.1.lib
lib_Release/: MicroFlakeX_A.0.1.1.exp  MicroFlakeX_A.0.1.1.lib
(+303 files in other folders)
